Do not use commons-io in tests
Java 11 gives us everything we need, so we do not need to bring
commons-io to the picture at all.

Signed-off-by: Robert Varga <robert.varga@pantheon.tech>